# TeaL

./: .envrc  .gitmodules  Cargo.toml  flake.nix
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml
.vim/: coc-settings.json
src/: create.sql  database.rs  main.rs  sorting.rs  ui.rs
src/cli/: argument_parser.rs  mod.rs  rendering.rs
src/docs/: My-plan-for-the-next-weeks.md  NEA-Analysis.md
tests/: testing.db
