[package]
name = "tasklist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite"] }
tui = "0.19.0"
crossterm = "0.25.0"
fuzzy-matcher = "0.3.7"
