[package]
name = "tasklist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tui = "0.19.0"
crossterm = "0.25.0"
eyre = "0.6.8"
color-eyre = "0.6.2"
fuzzy-matcher = "0.3.7"
env_logger = "0.10.0"
tabled = { version = "0.10.0", features = ["color"] }
unicode-segmentation = "1.10.1"
strip-ansi = "0.1.0"
platform-dirs = "0.3.0"
